--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "expo-new-app",
-    "slug": "expo-new-app",
+    "name": "tara-store-mobile",
+    "slug": "tara-store-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
