--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "0.2.7",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
+    "bootstrap-4-react": "^0.0.59",
     "expo": "~46.0.16",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
-    "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "react-native-screens": "~3.15.0",
     "react-native-safe-area-context": "4.3.1",
-    "expo-splash-screen": "~0.16.2"
+    "react-native-screens": "~3.15.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
