--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-option-select": "^1.0.4",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "react-native-vector-icons": "^9.2.0"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
