--- a/package.json
+++ b/package.json
@@ -14,11 +14,7 @@
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.3",
-    "@react-native-picker/picker": "^2.4.8",
-    "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/drawer": "^6.5.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.2",
+    "@react-native-picker/picker": "2.4.2",
     "bootstrap-4-react": "^0.0.59",
     "expo": "~46.0.16",
     "expo-splash-screen": "~0.16.2",
@@ -28,13 +24,9 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
-    "react-native-dropdown-select-list": "^1.0.23",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-option-select": "^1.0.4",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-dropdown-select-list": "^1.0.23",
+    "react-native-option-select": "^1.0.4",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
