--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "tara-store-mobile",
+    "name": "Tara Store",
     "slug": "tara-store-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -21,6 +21,8 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "www.techeverywhere.space",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
