--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "11.23.0",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "expo-updates": "~0.14.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
