--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "flutterwave-react-native": "^1.0.2",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-dotenv": "^3.4.2",
     "react-native-dropdown-select-list": "^1.0.23",
     "react-native-gesture-handler": "~2.5.0",
